--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-pixi-fiber": "^0.6.2",
     "react-scripts": "2.1.1",
     "react-star-wars-crawl": "^2.0.0"
   },
