--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.6.3",
     "react-pixi-fiber": "^0.6.2",
     "react-scripts": "2.1.1",
-    "react-star-wars-crawl": "^2.0.0"
+    "react-star-wars-crawl": "^2.0.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
